--- a/html/views/scoreboard.html
+++ b/html/views/scoreboard.html
@@ -68,7 +68,8 @@ function setupMainDiv(div) {
   });
 
   _crgUtils.bindAndRun($(window), "resize", function() {
-    $("#mainDiv").css(_windowFunctions.get4x3Dimensions()).css("fontSize", $(window).height()+"px");
+    var aspect4x3 = _windowFunctions.get4x3Dimensions();
+    $("#mainDiv").css(aspect4x3).css("fontSize", aspect4x3.height);
   });
 }
 
