--- a/html/controls/operator.css
+++ b/html/controls/operator.css
@@ -39,7 +39,7 @@ table.RowTable { border-spacing: 0px; }
   #TeamTime table.JamControl tr.UndoControls:not(.ShowUndo) { display: none; }
 
   #TeamTime table.Team>tbody>tr>td { width: 50%; }
-  #TeamTime table.Team tr.Name td.Name a { font-size: 200%; }
+  #TeamTime table.Team tr.Name td.Name div { max-height: 100px; max-width: 300px; overflow: hidden; font-size: 150%; }
   #TeamTime table.Team tr.Name td.Logo img { height: 50px; vertical-align: middle; }
   #TeamTime table.Team tr.Score td.Score a { font-size: 300%; }
   #TeamTime table.Team tr.Timeout td.Timeouts a { font-size: 200%; }
