--- a/html/views/scoreboard.css
+++ b/html/views/scoreboard.css
@@ -125,6 +125,7 @@ a { font-weight: bold; font-family: 'LiberationSans',helvetica; }
   /* Main box */
   #Period_small { right: 100%; top: 59%; width: 50%; bottom: 0%; }
   #Period_small.ShowTimeout,#Period_small.ShowLineup { right: 50%; }
+  #Period_small.TransTimeoutLineup,#Period_small.TransLineupTimeout { right: 50%; }
 
   /* Name sub-box */
   #Period_small>div.Name { top: 0%; left: 58%; width: 24%; height: 29%; border-radius: 20% / 25%; }
@@ -156,6 +157,7 @@ a { font-weight: bold; font-family: 'LiberationSans',helvetica; }
   /* Main box */
   #Jam_small { left: 0%; top: 100%; width: 100%; height: 41%; }
   #Jam_small.ShowTimeout,#Jam_small.ShowLineup { top: 59%; }
+  #Jam_small.TransTimeoutLineup,#Jam_small.TransLineupTimeout { top: 59%; }
 
   /* Name sub-box */
   #Jam_small>div.Name { top: 0%; left: 42%; width: 16.25%; height: 29%; border-radius: 15% / 25%; }
@@ -210,6 +212,7 @@ a { font-weight: bold; font-family: 'LiberationSans',helvetica; }
   /* Main box */
   #AdBox { left: 0%; top: 100%; width: 100%; height: 26%; }
   #AdBox.ShowTimeout,#AdBox.ShowLineup { top: 74%; }
+  #AdBox.TransTimeoutLineup,#AdBox.TransLineupTimeout { top: 74%; }
 
   #AdBox>div { top: 0%; right: 0%; width: 100%; height: 100%; font-size: 0px; }
   #AdBox>div.FinishedAd { right: -100%; }
