--- a/html/views/scoreboard.css
+++ b/html/views/scoreboard.css
@@ -16,7 +16,7 @@
 #mainDiv div { position: absolute; }
 #mainDiv>div.View { width: 100%; height: 100%; }
 #mainDiv>div.View:not(.Show) { opacity: 0; }
-#mainDiv>div.View:not(#scoreboardDiv) { z-index: -500; }
+#mainDiv>div.View:not(#sbDiv) { z-index: -500; }
 
 div.full { height: 100%; width: 100%; border-radius: inherit; }
 div.Pulse { background: #ff0000; }
@@ -37,7 +37,7 @@ a { font-weight: bold; font-family: 'LiberationSans',helvetica; }
 
 
 /* http://net.tutsplus.com/tutorials/html-css-techniques/quick-tip-understanding-css3-gradients/ */
-#scoreboardDiv {
+#sbDiv {
   z-index: -100;
   background: #222222;
   background: -moz-linear-gradient(top, #000000, #222222 50%, #777777 100%);
