--- a/html/controls/operator.css
+++ b/html/controls/operator.css
@@ -61,11 +61,14 @@ table.RowTable { border-spacing: 0px; }
 /* End Policies */
 
 /* ScoreBoard View */
-  #ScoreBoardView tr>td { text-align: center; width: 100%; }
-  #ScoreBoardView tr.Control>td { background: #ccc; border-radius: 12px; }
-  #ScoreBoardView tr.Name>td { background: #ccc; border-radius: 12px 12px 0px 0px; }
-  #ScoreBoardView tr.Name>td.Hide { border-radius: 12px; }
-  #ScoreBoardView tr.Options>td { background: #eee; border-radius: 0px 0px 12px 12px; }
+  #ScoreBoardView.UsePreview>tbody>tr.View { display: none; }
+  #ScoreBoardView:not(.UsePreview)>tbody>tr.Preview { display: none; }
+  #ScoreBoardView>tbody>tr>td { text-align: center; width: 100%; background: #eee; }
+  #ScoreBoardView>tbody>tr>td.Header { background: #ccc; border-radius: 12px 12px 0px 0px; }
+  #ScoreBoardView>tbody>tr>td.Header.NoChildren { border-radius: 12px; }
+  #ScoreBoardView>tbody>tr>td.Footer { border-radius: 0px 0px 12px 12px; }
+  #ScoreBoardView>tbody>tr>td.ChangesAffect>a { font-size: 150%; font-weight: bold; }
+  #ScoreBoardView>tbody>tr>td.ViewFrames iframe { width: 100%; height: 300px; }
 /* End ScoreBoard View */
 
 /* Xml Tree Control */
