--- a/html/views/scoreboard.css
+++ b/html/views/scoreboard.css
@@ -47,6 +47,7 @@ a { font-weight: bold; font-family: 'LiberationSans',helvetica; }
 /* Views */
   #imageDiv>img { width: 100%; height: 100%; }
   #videoDiv>video { width: 100%; height: 100%; }
+  #htmlDiv>iframe { width: 100%; height: 100%; scrolling: no; frameborder: 0px; }
 /* End Views */
 
 /* Teams */
