change View().Filename to View().Src

--- a/html/views/scoreboard.html
+++ b/html/views/scoreboard.html
@@ -52,9 +52,9 @@ $sb(function() {
     showDiv.addClass("Show", 500);
   });
 
-  sbViewOptions.$sb("View(Image).Filename").$sbElement("#imageDiv>img");
-  sbViewOptions.$sb("View(Video).Filename").$sbElement("#videoDiv>video");
-  sbViewOptions.$sb("View(CustomHtml).Filename").$sbElement("#htmlDiv>iframe");
+  sbViewOptions.$sb("View(Image).Src").$sbElement("#imageDiv>img");
+  sbViewOptions.$sb("View(Video).Src").$sbElement("#videoDiv>video");
+  sbViewOptions.$sb("View(CustomHtml).Src").$sbElement("#htmlDiv>iframe");
 
   setupSponsorBanners();
   setupTeams();
